[gd_scene load_steps=5 format=3 uid="uid://tgaigoiiqvmc"]

[ext_resource type="Script" path="res://addons/pandora/ui/components/properties/property_control_kvp.gd" id="1_1h35p"]
[ext_resource type="Texture2D" uid="uid://bhcep67ihojnd" path="res://addons/pandora/icons/Reload.svg" id="2_718d2"]
[ext_resource type="Texture2D" uid="uid://bfs83ic84umkv" path="res://addons/pandora/icons/nanoid.svg" id="3_1psa3"]
[ext_resource type="Texture2D" uid="uid://b2s1ixfakdj1e" path="res://addons/pandora/icons/Remove.svg" id="4_2n76s"]

[node name="PropertyControlKVP" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1h35p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PropertyKey" type="LinkButton" parent="HBoxContainer/HBoxContainer/Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyKeyEdit" type="LineEdit" parent="HBoxContainer/HBoxContainer/Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = -2

[node name="ResetButton" type="Button" parent="HBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("2_718d2")

[node name="PropertyValue" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RegenerateIDButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("3_1psa3")

[node name="DeletePropertyButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("4_2n76s")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Delete confirmation"
initial_position = 4
size = Vector2i(400, 200)
dialog_text = "Confirm deletion? This can have impact on children!"
